--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
 /* CSS stylesheet for index.html */
+
+@font-face {
+    font-family: 'norsebold';
+    src: url('fonts/norse-bold-webfont.woff2') format('woff2'),
+         url('fonts/norse-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
