--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,41 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     min-height: 100vh;
+    display: flex;
+}
+
+.image-sidebar {
+    height: 100%;
+    width: 35vw;
+    border: .5rem solid black;
+    background: green;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-sidebar-logo {
+    position: absolute;
+    top: 20%;
+    height: 20%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0 0 0 / 20%);
+}
+
+.odin-logo {
+    height: 80%;
+    width: auto;
+}
+
+.logo-title {
+    font-family: norsebold;
+    font-size: 5rem;
+    color: white;
+    align-self: center;
 }
