--- a/styles.css
+++ b/styles.css
@@ -16,18 +16,16 @@
 
 html, body {
     min-height: 100vh;
+    min-width: 100vw;
     display: flex;
 }
 
 .image-sidebar {
     height: 100%;
-    width: 35vw;
+    width: 35%;
     border: .5rem solid black;
     background: green;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .image-sidebar-logo {
@@ -51,4 +49,22 @@ html, body {
     font-size: 5rem;
     color: white;
     align-self: center;
+}
+
+.main-content {
+    height: 100%;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-content-wrapper {
+    flex: 2;
+    background-color: antiquewhite;
+}
+
+.form-description-wrapper,
+.account-options-wrapper {
+    flex: auto;
+    background-color: white;
 }
