Add form inputs to html and basic styling
Form items are layed out in rows of 2. Much further styling needed to
ensure items appropriately align with stylistic vision.

--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,17 @@ html, body {
     font-size: 2rem;
     padding: 10px 0 0 80px;
 }
+
+div.form-line {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+div.form-item {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    width: 120px;
+}
