--- a/styles.css
+++ b/styles.css
@@ -76,20 +76,24 @@ html, body {
 }
 
 .form-content-wrapper p:first-child {
-    font-size: 2rem;
-    padding: 10px 0 0 80px;
+    font-size: 1.5rem;
+    padding: 10px 0 0 40px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 div.form-line {
     display: flex;
-    justify-content: space-evenly;
+    margin-bottom: 30px;
 }
 
 div.form-item {
     display: flex;
     flex-direction: column;
+    margin: 0px 160px 0px 40px;
 }
 
 input {
-    width: 120px;
+    font-size: 1rem;
+    width: 160px;
 }
