--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@
     font-style: normal;
 }
 
+:root {
+    --main-content-left-margin: 40px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -99,5 +103,15 @@ input {
 }
 
 button[type="submit"] {
+    height: 40px;
+    width: 160px;
     margin: 20px 0px 20px 40px;
+}
+
+.account-options-wrapper p {
+    margin: 0 0 0 40px;
+}
+
+p.account-login a {
+    text-decoration: none;
 }
