--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ html, body {
 
 .form-description-wrapper {
     font-size: 1.25rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
     padding: 60px 80px 20px var(--main-content-left-margin);
 }
 
@@ -99,12 +99,19 @@ div.form-item {
 input {
     font-size: 1rem;
     width: 160px;
+    border-radius: 4px;
+    padding: .15rem;
+}
+
+input:invalid {
+    border: 2px solid red;
+    background-color: rgb(255 0 0 / 20%);
 }
 
 button[type="submit"] {
     height: 40px;
     width: 160px;
-    margin: 20px 0px 20px var(--main-content-left-margin);
+    margin: 20px 0px 10px var(--main-content-left-margin);
 }
 
 .account-options-wrapper p {
