--- a/styles.css
+++ b/styles.css
@@ -88,18 +88,18 @@ html, body {
 .form-content-wrapper p:first-child {
     font-size: 1.5rem;
     padding-top: 20px;
-    margin: 0 0 40px var(--main-content-left-margin);
+    margin: 0 0 30px var(--main-content-left-margin);
 }
 
 div.form-line {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 div.last-form-line {
     display: flex;
     margin-bottom: 0;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 div.form-item {
@@ -110,9 +110,14 @@ div.form-item {
 
 input {
     font-size: 1rem;
-    width: 200px;
+    width: 240px;
+    min-height: 2rem;
     border-radius: 4px;
-    padding: .15rem;
+    padding: .25rem 0 .25rem .5rem;
+}
+
+input[type="password"] {
+    font-size: .75rem;
 }
 
 input::placeholder {
